feat(build): add guarded OpenRewrite maintenance lane
Add the pinned, curated OpenRewrite profile, accepted baseline, required CI
dry run, Renovate policy, and maintenance documentation without adding a
second workflow.

Refs: https://github.com/martin-francois/symphony-trello/issues/587